// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiNotificationEvent is rendered 1`] = `
<article
  aria-labelledby="generated-id"
  class="ouiNotificationEvent"
>
  <div
    class="ouiNotificationEvent__content"
  >
    <div
      class="ouiNotificationEventMeta"
    >
      <div
        class="ouiNotificationEventMeta__section"
      >
        <span
          class="ouiBadge ouiBadge--hollow ouiBadge--iconLeft ouiNotificationEventMeta__badge"
        >
          <span
            class="ouiBadge__content"
          >
            <span
              class="ouiBadge__text"
            >
              Alert
            </span>
          </span>
        </span>
      </div>
      <div
        class="ouiNotificationEventMeta__section"
      >
        <span
          class="ouiNotificationEventMeta__time"
        >
          1 min ago
        </span>
      </div>
    </div>
    <h2
      class="ouiNotificationEvent__title"
      data-test-subj="id-notificationEventTitle"
      id="generated-id"
    >
      title
    </h2>
    <div
      class="ouiNotificationEventMessages"
    >
      <div
        class="ouiText ouiText--small"
      >
        <div
          class="ouiTextColor ouiTextColor--subdued"
        >
          <p>
            message
          </p>
        </div>
      </div>
    </div>
  </div>
</article>
`;

exports[`OuiNotificationEvent props badgeColor is rendered 1`] = `
<article
  aria-labelledby="generated-id"
  class="ouiNotificationEvent"
>
  <div
    class="ouiNotificationEvent__content"
  >
    <div
      class="ouiNotificationEventMeta"
    >
      <div
        class="ouiNotificationEventMeta__section"
      >
        <span
          class="ouiBadge ouiBadge--iconLeft ouiNotificationEventMeta__badge"
          style="background-color:#f1d86f;color:#000"
        >
          <span
            class="ouiBadge__content"
          >
            <span
              class="ouiBadge__text"
            >
              Alert
            </span>
          </span>
        </span>
      </div>
      <div
        class="ouiNotificationEventMeta__section"
      >
        <span
          class="ouiNotificationEventMeta__time"
        >
          1 min ago
        </span>
      </div>
    </div>
    <h2
      class="ouiNotificationEvent__title"
      data-test-subj="id-notificationEventTitle"
      id="generated-id"
    >
      title
    </h2>
    <div
      class="ouiNotificationEventMessages"
    >
      <div
        class="ouiText ouiText--small"
      >
        <div
          class="ouiTextColor ouiTextColor--subdued"
        >
          <p>
            message
          </p>
        </div>
      </div>
    </div>
  </div>
</article>
`;

exports[`OuiNotificationEvent props contextMenuItems are rendered 1`] = `
<div
  class="ouiContextMenuPanel"
  tabindex="-1"
>
  <div>
    <div>
      <button
        class="ouiContextMenuItem"
        type="button"
      >
        <span
          class="ouiContextMenu__itemLayout"
        >
          <span
            class="ouiContextMenuItem__text"
          >
            Context menu 1 for id: id
          </span>
        </span>
      </button>
      <button
        class="ouiContextMenuItem"
        type="button"
      >
        <span
          class="ouiContextMenu__itemLayout"
        >
          <span
            class="ouiContextMenuItem__text"
          >
            Context menu 2 for id: id
          </span>
        </span>
      </button>
      <button
        class="ouiContextMenuItem"
        type="button"
      >
        <span
          class="ouiContextMenu__itemLayout"
        >
          <span
            class="ouiContextMenuItem__text"
          >
            Context menu 3 for id: id
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`OuiNotificationEvent props headingLevel is rendered 1`] = `
<article
  aria-labelledby="generated-id"
  class="ouiNotificationEvent"
>
  <div
    class="ouiNotificationEvent__content"
  >
    <div
      class="ouiNotificationEventMeta"
    >
      <div
        class="ouiNotificationEventMeta__section"
      >
        <span
          class="ouiBadge ouiBadge--hollow ouiBadge--iconLeft ouiNotificationEventMeta__badge"
        >
          <span
            class="ouiBadge__content"
          >
            <span
              class="ouiBadge__text"
            >
              Alert
            </span>
          </span>
        </span>
      </div>
      <div
        class="ouiNotificationEventMeta__section"
      >
        <span
          class="ouiNotificationEventMeta__time"
        >
          1 min ago
        </span>
      </div>
    </div>
    <h4
      class="ouiNotificationEvent__title"
      data-test-subj="id-notificationEventTitle"
      id="generated-id"
    >
      title
    </h4>
    <div
      class="ouiNotificationEventMessages"
    >
      <div
        class="ouiText ouiText--small"
      >
        <div
          class="ouiTextColor ouiTextColor--subdued"
        >
          <p>
            message
          </p>
        </div>
      </div>
    </div>
  </div>
</article>
`;

exports[`OuiNotificationEvent props iconAriaLabel is rendered 1`] = `
<article
  aria-labelledby="generated-id"
  class="ouiNotificationEvent"
>
  <div
    class="ouiNotificationEvent__content"
  >
    <div
      class="ouiNotificationEventMeta"
    >
      <div
        class="ouiNotificationEventMeta__section"
      >
        <span
          aria-label="my icon aria label"
          class="ouiNotificationEventMeta__icon"
          data-ouiicon-type="logoCloud"
        />
        <span
          class="ouiBadge ouiBadge--hollow ouiBadge--iconLeft ouiNotificationEventMeta__badge"
        >
          <span
            class="ouiBadge__content"
          >
            <span
              class="ouiBadge__text"
            >
              Alert
            </span>
          </span>
        </span>
      </div>
      <div
        class="ouiNotificationEventMeta__section"
      >
        <span
          class="ouiNotificationEventMeta__time"
        >
          1 min ago
        </span>
      </div>
    </div>
    <h2
      class="ouiNotificationEvent__title"
      data-test-subj="id-notificationEventTitle"
      id="generated-id"
    >
      title
    </h2>
    <div
      class="ouiNotificationEventMessages"
    >
      <div
        class="ouiText ouiText--small"
      >
        <div
          class="ouiTextColor ouiTextColor--subdued"
        >
          <p>
            message
          </p>
        </div>
      </div>
    </div>
  </div>
</article>
`;

exports[`OuiNotificationEvent props iconType is rendered 1`] = `
<article
  aria-labelledby="generated-id"
  class="ouiNotificationEvent"
>
  <div
    class="ouiNotificationEvent__content"
  >
    <div
      class="ouiNotificationEventMeta"
    >
      <div
        class="ouiNotificationEventMeta__section"
      >
        <span
          aria-hidden="true"
          class="ouiNotificationEventMeta__icon"
          data-ouiicon-type="logoCloud"
        />
        <span
          class="ouiBadge ouiBadge--hollow ouiBadge--iconLeft ouiNotificationEventMeta__badge"
        >
          <span
            class="ouiBadge__content"
          >
            <span
              class="ouiBadge__text"
            >
              Alert
            </span>
          </span>
        </span>
      </div>
      <div
        class="ouiNotificationEventMeta__section"
      >
        <span
          class="ouiNotificationEventMeta__time"
        >
          1 min ago
        </span>
      </div>
    </div>
    <h2
      class="ouiNotificationEvent__title"
      data-test-subj="id-notificationEventTitle"
      id="generated-id"
    >
      title
    </h2>
    <div
      class="ouiNotificationEventMessages"
    >
      <div
        class="ouiText ouiText--small"
      >
        <div
          class="ouiTextColor ouiTextColor--subdued"
        >
          <p>
            message
          </p>
        </div>
      </div>
    </div>
  </div>
</article>
`;

exports[`OuiNotificationEvent props isRead  is rendered 1`] = `
<article
  aria-labelledby="generated-id"
  class="ouiNotificationEvent ouiNotificationEvent--withReadState"
>
  <div
    class="ouiNotificationEvent__readButton"
  >
    <button
      aria-label="Mark title as unread"
      class="ouiButtonIcon ouiButtonIcon--primary ouiButtonIcon--empty ouiButtonIcon--xSmall ouiNotificationEventReadButton ouiNotificationEventReadButton--isRead"
      data-test-subj="id-notificationEventReadButton"
      title="Mark as unread"
      type="button"
    >
      <span
        aria-hidden="true"
        class="ouiButtonIcon__icon"
        color="inherit"
        data-ouiicon-type="dot"
      />
    </button>
  </div>
  <div
    class="ouiNotificationEvent__content"
  >
    <div
      class="ouiNotificationEventMeta"
    >
      <div
        class="ouiNotificationEventMeta__section"
      >
        <span
          class="ouiBadge ouiBadge--hollow ouiBadge--iconLeft ouiNotificationEventMeta__badge"
        >
          <span
            class="ouiBadge__content"
          >
            <span
              class="ouiBadge__text"
            >
              Alert
            </span>
          </span>
        </span>
      </div>
      <div
        class="ouiNotificationEventMeta__section"
      >
        <span
          class="ouiNotificationEventMeta__time"
        >
          1 min ago
        </span>
      </div>
    </div>
    <h2
      class="ouiNotificationEvent__title ouiNotificationEvent__title--isRead"
      data-test-subj="id-notificationEventTitle"
      id="generated-id"
    >
      title
    </h2>
    <div
      class="ouiNotificationEventMessages"
    >
      <div
        class="ouiText ouiText--small"
      >
        <div
          class="ouiTextColor ouiTextColor--subdued"
        >
          <p>
            message
          </p>
        </div>
      </div>
    </div>
  </div>
</article>
`;

exports[`OuiNotificationEvent props multiple messages are rendered 1`] = `
<article
  aria-labelledby="generated-id"
  class="ouiNotificationEvent"
>
  <div
    class="ouiNotificationEvent__content"
  >
    <div
      class="ouiNotificationEventMeta"
    >
      <div
        class="ouiNotificationEventMeta__section"
      >
        <span
          class="ouiBadge ouiBadge--hollow ouiBadge--iconLeft ouiNotificationEventMeta__badge"
        >
          <span
            class="ouiBadge__content"
          >
            <span
              class="ouiBadge__text"
            >
              Alert
            </span>
          </span>
        </span>
      </div>
      <div
        class="ouiNotificationEventMeta__section"
      >
        <span
          class="ouiNotificationEventMeta__time"
        >
          1 min ago
        </span>
      </div>
    </div>
    <h2
      class="ouiNotificationEvent__title"
      data-test-subj="id-notificationEventTitle"
      id="generated-id"
    >
      title
    </h2>
    <div
      class="ouiNotificationEventMessages"
    >
      <div
        class="ouiText ouiText--small"
      >
        <div
          class="ouiTextColor ouiTextColor--subdued"
        >
          <p>
            message 1
          </p>
        </div>
      </div>
      <div
        class="ouiAccordion ouiNotificationEventMessages__accordion"
      >
        <div
          class="ouiAccordion__triggerWrapper"
        >
          <button
            aria-controls="ouiNotificationEventMessagesAccordion_generated-id"
            aria-expanded="false"
            aria-label="+ 2 messages for title"
            class="ouiAccordion__button ouiNotificationEventMessages__accordionButton"
            id="generated-id"
            type="button"
          >
            <span
              class="ouiIEFlexWrapFix"
            >
              + 2 more
            </span>
          </button>
        </div>
        <div
          aria-labelledby="generated-id"
          class="ouiAccordion__childWrapper"
          id="ouiNotificationEventMessagesAccordion_generated-id"
          role="region"
          tabindex="-1"
        >
          <div>
            <div
              class=""
            >
              <div
                class="ouiNotificationEventMessages__accordionContent"
              >
                <div
                  class="ouiText ouiText--small"
                >
                  <div
                    class="ouiTextColor ouiTextColor--subdued"
                  >
                    <p>
                      message 2
                    </p>
                  </div>
                </div>
                <div
                  class="ouiText ouiText--small"
                >
                  <div
                    class="ouiTextColor ouiTextColor--subdued"
                  >
                    <p>
                      message 3
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</article>
`;

exports[`OuiNotificationEvent props primaryAction is rendered 1`] = `
<article
  aria-labelledby="generated-id"
  class="ouiNotificationEvent"
>
  <div
    class="ouiNotificationEvent__content"
  >
    <div
      class="ouiNotificationEventMeta"
    >
      <div
        class="ouiNotificationEventMeta__section"
      >
        <span
          class="ouiBadge ouiBadge--hollow ouiBadge--iconLeft ouiNotificationEventMeta__badge"
        >
          <span
            class="ouiBadge__content"
          >
            <span
              class="ouiBadge__text"
            >
              Alert
            </span>
          </span>
        </span>
      </div>
      <div
        class="ouiNotificationEventMeta__section"
      >
        <span
          class="ouiNotificationEventMeta__time"
        >
          1 min ago
        </span>
      </div>
    </div>
    <h2
      class="ouiNotificationEvent__title"
      data-test-subj="id-notificationEventTitle"
      id="generated-id"
    >
      title
    </h2>
    <div
      class="ouiNotificationEventMessages"
    >
      <div
        class="ouiText ouiText--small"
      >
        <div
          class="ouiTextColor ouiTextColor--subdued"
        >
          <p>
            message
          </p>
        </div>
      </div>
    </div>
    <div
      class="ouiNotificationEvent__primaryAction"
    >
      <button
        class="ouiButtonEmpty ouiButtonEmpty--primary ouiButtonEmpty--small ouiButtonEmpty--flushLeft"
        data-test-subj="id-notificationEventPrimaryAction"
        type="button"
      >
        <span
          class="ouiButtonContent ouiButtonEmpty__content"
        >
          <span
            class="ouiButtonEmpty__text"
          >
            primaryAction label
          </span>
        </span>
      </button>
    </div>
  </div>
</article>
`;

exports[`OuiNotificationEvent props primaryActionProps is rendered 1`] = `
<article
  aria-labelledby="generated-id"
  class="ouiNotificationEvent"
>
  <div
    class="ouiNotificationEvent__content"
  >
    <div
      class="ouiNotificationEventMeta"
    >
      <div
        class="ouiNotificationEventMeta__section"
      >
        <span
          class="ouiBadge ouiBadge--hollow ouiBadge--iconLeft ouiNotificationEventMeta__badge"
        >
          <span
            class="ouiBadge__content"
          >
            <span
              class="ouiBadge__text"
            >
              Alert
            </span>
          </span>
        </span>
      </div>
      <div
        class="ouiNotificationEventMeta__section"
      >
        <span
          class="ouiNotificationEventMeta__time"
        >
          1 min ago
        </span>
      </div>
    </div>
    <h2
      class="ouiNotificationEvent__title"
      data-test-subj="id-notificationEventTitle"
      id="generated-id"
    >
      title
    </h2>
    <div
      class="ouiNotificationEventMessages"
    >
      <div
        class="ouiText ouiText--small"
      >
        <div
          class="ouiTextColor ouiTextColor--subdued"
        >
          <p>
            message
          </p>
        </div>
      </div>
    </div>
    <div
      class="ouiNotificationEvent__primaryAction"
    >
      <button
        class="ouiButtonEmpty ouiButtonEmpty--primary ouiButtonEmpty--small ouiButtonEmpty--flushLeft"
        data-test-subj="id-notificationEventPrimaryAction"
        type="button"
      >
        <span
          class="ouiButtonContent ouiButtonEmpty__content"
        >
          <span
            class="ouiButtonContent__icon"
            color="inherit"
            data-ouiicon-type="download"
          />
          <span
            class="ouiButtonEmpty__text"
          >
            primaryAction
          </span>
        </span>
      </button>
    </div>
  </div>
</article>
`;

exports[`OuiNotificationEvent props severity  is rendered 1`] = `
<article
  aria-labelledby="generated-id"
  class="ouiNotificationEvent"
>
  <div
    class="ouiNotificationEvent__content"
  >
    <div
      class="ouiNotificationEventMeta"
    >
      <div
        class="ouiNotificationEventMeta__section"
      >
        <span
          class="ouiBadge ouiBadge--hollow ouiBadge--iconLeft ouiNotificationEventMeta__badge"
        >
          <span
            class="ouiBadge__content"
          >
            <span
              class="ouiBadge__text"
            >
              Alert: severity
            </span>
          </span>
        </span>
      </div>
      <div
        class="ouiNotificationEventMeta__section"
      >
        <span
          class="ouiNotificationEventMeta__time"
        >
          1 min ago
        </span>
      </div>
    </div>
    <h2
      class="ouiNotificationEvent__title"
      data-test-subj="id-notificationEventTitle"
      id="generated-id"
    >
      title
    </h2>
    <div
      class="ouiNotificationEventMessages"
    >
      <div
        class="ouiText ouiText--small"
      >
        <div
          class="ouiTextColor ouiTextColor--subdued"
        >
          <p>
            message
          </p>
        </div>
      </div>
    </div>
  </div>
</article>
`;
